--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-
+<div class="wrapper">
 <!-- Header  -->
   <div class="cyber-background"></div>
   <header>
@@ -136,6 +136,7 @@
       </div>
     </div>
   </div>
+     </div>
   
   <script src="script.js"></script>
 
