--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
 <!-- Header  -->
+
   <div class="cyber-background"></div>
   <header>
       <h1 class="neon-text name-animation" id="nameAnimation"> 
@@ -15,8 +16,8 @@
       <p class="neon-text"> Cybersecurity | AI | Automation</p>
   </header>
 <!-- Content -->
-
 <div class="container">
+
   <div id="terminal">
       <div id="command"> echo "Unleash cybersecurity, shield with encryption, guard the digital world."<span id="cursor"></span></div>
   </div>
@@ -26,49 +27,97 @@
 <div class="container">
 
   <div class="section journey fade-in">
-      <h2 class="neon-text">Work Journey</h2>
-      <ul>
-          <li><strong>Oct 2023 - Present : </strong>Cybersecurity Specialist at Confidential</li>
-          <li><strong>Sep 2023 - Oct 2023 : </strong>Web Developer and Artificial Intelligence at Netways Solutions</li>
-          <li><strong>Jul 2021 -  May 2022 : </strong> IOT Devices and Support on updating firemware at STC channel </li>
-      </ul>
-  </div>
-  <div class="section skills fade-in">
-      <h2 class="neon-text">Skills</h2>
-      <ul>
-          <li>HTML, CSS, JavaScript, React, Angular</li>
-          <li>Node.js, Express.js</li>
-          <li>Python, Django</li>
-          <li>Wireshark</li>
-          <li>AI, Promoting </li>
-      </ul>
-  </div>
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="card-diamond">♦</div>
+          <div class="let-diamond">♦</div>
+          
+          Work Journey
+        </div>
+       
 
+        <div class="card-back">
+      <ul>
+          <li><strong>Oct 2023 - Present</strong> Cybersecurity Specialist at Confidential</li>
+          <li><strong>Sep 2023 - Oct 2023</strong> Web Developer and Artificial Intelligence at Netways Solutions</li>
+          <li><strong>Jul 2021 -  May 2022</strong> IOT Devices and Support on updating firemware at STC channel </li>
+      </ul>
+  </div>
+</div>
+</div>
+</div>
+</div>
+
+
+  <div class="section skills fade-in">
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="card-diamond">♥</div>
+          <div class="let-diamond">♥</div>
+      Skills
+    </div>
+    <div class="card-back">
+      <ul>
+        <strong><li>HTML, CSS, JavaScript, React, Angular</li></strong>
+        <strong><li>Node.js, Express.js</li></strong>
+        <strong><li>Python, Django</li></strong>
+        <strong><li>Wireshark</li></strong>
+        <strong><li>AI, Promoting </li></strong>
+      </ul>
+  </div>
+</div>
+</div>
+</div>
 
 
 <!-- BOX -->
 <div class="section skills fade-in">
-<h2 class="neon-text">Completed Courses In</h2>
+  <div class="card">
+    <div class="card-inner">
+      <div class="card-front">
+        <div class="card-diamond">♠</div>
+        <div class="let-diamond">♠</div>
+Courses
+      </div>
+      <div class="card-back">
 <ul>
-  <li><strong>Artificial Intelligence :</strong>Tensorflow, Numpy, Panda</li>
-  <li><strong>Automation :</strong> Python, Selenium</li>
-  <li><strong>Pentest :</strong> Jr.Penetration testing</li>
-  <li><strong>Monitoring :</strong> SIEM Splunk, Elastic, IDS, Wireshark </li>
+  <li><strong>Artificial Intelligence</strong> Tensorflow, Numpy, Panda</li>
+  <li><strong>Automation</strong> Python, Selenium</li>
+  <li><strong>Pentest</strong> Jr.Penetration testing</li>
+  <li><strong>Monitoring</strong> SIEM Splunk, Elastic, IDS, Wireshark </li>
 </ul>
+</div>
+
+
+</div>
+</div>
 </div>
 
 <div>
 
+
 <div class="section skills fade-in">
-<h2 class="neon-text">Encrypt The Message </h2>
-<div class="Encrypt">
-<ul>
+  <div class="card">
+    <div class="card-inner">
+      <div class="card-front">
+        <div class="card-diamond">♣</div>
+        <div class="let-diamond">♣</div>
+Encrypt The Message
+      </div>
+      <div class="card-back">
+    <div class="Encrypt">
+    <ul>
     <li>Click on Secert Message</li>
 <li><div class="encrypted-text neon" onclick="encryptText()">Secert Message</div></li>
 </ul>
 </div>
 </div>
-
+</div>
+</div>
+</div>
+</div>
 
 <div id="packet-dissector">
 <div class="packet-header"><strong>Packets Output</strong></div>
@@ -137,7 +186,6 @@
     </div>
   </div>
 
-  
   <script src="script.js"></script>
 
 </body>
