--- a/index.html
+++ b/index.html
@@ -123,18 +123,7 @@ Encrypt The Message
 <div class="packet-header"><strong>Packets Output</strong></div>
 <div class="packet-line">
 
-<div class="hex">45 00 00 54 00 00 40 00 40 06 7f 3c c0 a8 01 64 | E..T..@.@.....d</div>
-<div class="packet-line">
-  <div class="hex">c0 a8 01 01 08 00 27 96 00 00 00 01 00 00 00 00 | .....GE T /HTTP...</div>
-</div>
-<div class="packet-line">
-
-  <div class="hex">a0 02 fa f0 16 d0 00 00 02 04 05 b4 04 02 08 0a | ....Mal. php'....</div>
-  
-</div>
-<div class="packet-line">
-  
-  <div class="hex">00 2d 66 79 00 00 00 00 01 03 03 07 b4 04 02 08 | .-fy........</div>
+<img src="hex.png" alt="hex" height="100%" width="100%">
   
 </div>
 </div>
