--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
 </div>
 
 
+
+<div class="flip-card" onclick="this.classList.toggle('flipped')">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <!-- Front Content -->
+      FRONT SIDE
+    </div>
+    <div class="flip-card-back">
+      <!-- Back Content -->
+      BACK SIDE
+    </div>
+  </div>
+</div>
+
+    
   <div class="section skills fade-in">
     <div class="card">
       <div class="card-inner">
