--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="container">
 
   <div class="section journey fade-in">
-    <div class="card">
+    <div class="card" onclick="this.classList.toggle('flipped')">
       <div class="card-inner">
         <div class="card-front">
           <div class="card-diamond">♦</div>
