--- a/index.html
+++ b/index.html
@@ -51,22 +51,9 @@
 
 
 
-<div class="flip-card" onclick="this.classList.toggle('flipped')">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-      <!-- Front Content -->
-      FRONT SIDE
-    </div>
-    <div class="flip-card-back">
-      <!-- Back Content -->
-      BACK SIDE
-    </div>
-  </div>
-</div>
-
     
   <div class="section skills fade-in">
-    <div class="card">
+    <div class="card" onclick="this.classList.toggle('flipped')">
       <div class="card-inner">
         <div class="card-front">
           <div class="card-diamond">♥</div>
@@ -89,7 +76,7 @@
 
 <!-- BOX -->
 <div class="section skills fade-in">
-  <div class="card">
+  <div class="card" onclick="this.classList.toggle('flipped')">
     <div class="card-inner">
       <div class="card-front">
         <div class="card-diamond">♠</div>
@@ -114,7 +101,7 @@ Courses
 
 
 <div class="section skills fade-in">
-  <div class="card">
+  <div class="card" onclick="this.classList.toggle('flipped')">
     <div class="card-inner">
       <div class="card-front">
         <div class="card-diamond">♣</div>
