--- a/index.html
+++ b/index.html
@@ -927,7 +927,8 @@
                         <ul>
                             <li><strong>Frontend:</strong> HTML, CSS, JavaScript, React, Angular</li>
                             <li><strong>Backend:</strong> Node.js, Express.js, Python, Django</li>
-                            <li><strong>Security Tools:</strong> Wireshark, Metasploit, Nmap</li>
+                            <li><strong>Security Tools:</strong> Wireshark, Metasploit, Nmap, IDS, IPS</li>
+                            <li><strong>Scripts:</strong> Bash, Javascript, C#</li>
                             <li><strong>AI & ML:</strong> TensorFlow, PyTorch, NLP</li>
                             <li><strong>DevOps:</strong> Docker, CI/CD</li>
                             <li><strong>Cloud:</strong> AWS, Azure</li>
@@ -950,8 +951,8 @@
                         <h3>Professional Journey</h3>
                         <ul>
                             <li><strong>Cybersecurity Specialist</strong><br>Confidential Government (2023-Present)</li>
-                            <li><strong>Computer Programmer</strong><br>SAMI (2021-2022) </li>
-                            <li><strong>Technician Support</strong><br>MUBARRAD (2019) </li>
+                            <li><strong>Computer Programmer</strong><br>Saudi Arabian Military Industries SAMI (2021-2022) </li>
+                            <li><strong>Technician Support</strong><br>Mubarrad (2019) </li>
                           
                         </ul>
                     </div>
