--- a/index.html
+++ b/index.html
@@ -980,6 +980,7 @@
                                 <br><br>Splunk Search Expert Specialization
                                 <br> <br> Google Cloud Modern SOC
                                 <br><br> Programming Foundations: Web Security
+                                <br><br> Cybersecurity Incident Response Analysis by stc
                                 <br><br> IBM Generative AI for Cybersecurity Professionals Specialization
 
                                 <li><strong>Artifcial Intelligence</strong><br>
