--- a/index.html
+++ b/index.html
@@ -990,7 +990,9 @@
                                     <br><br>Microsoft Fundamental of Artificial Intelligence 
 
                                 <li><strong>Automation</strong><br>
-                                    <br>Google IT Automation with Python
+                                    <br>CS50's Introduction to Programming with Python
+                                    <br><br>Google IT Automation with Python
+                                    
                             </li>
                         </ul>
                     </div>
