--- a/index.html
+++ b/index.html
@@ -932,6 +932,7 @@
                             <li><strong>AI & ML:</strong> TensorFlow, PyTorch, NLP</li>
                             <li><strong>DevOps:</strong> Docker, CI/CD</li>
                             <li><strong>Cloud:</strong> AWS, Azure</li>
+                            <li><strong>OSINT Tools:</strong> Shodan.io, censys.io, Mitre Att&ck, AbuseIPDB, Virustotal, Whois</li>
                         </ul>
                     </div>
                 </div>
